[package]
name = "tokio-batch-benchmark"
version = "0.1.0"
authors = ["doyoubi <doyoubihgx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="redis-ping-pong-server"
path="src/main.rs"

[dependencies]
bytes = "0.4.12"
tokio = "0.2.0-alpha.6"
tokio-batch = { git = "https://github.com/doyoubi/tokio-batch", branch = "ReplaceTimerDev" }
futures-preview = { version = "0.3.0-alpha.19" }
futures-timer = "1.0.2"
clap = "2.33.0"
pin-utils = "0.1.0-alpha.4"
env_logger = "0.6.0"
log = "0.4"
